[package]
name = "redbot"
version = "0.1.3"
authors = ["Celeo <celeodor@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/celeo/redbot"
repository = "https://github.com/celeo/redbot"
documentation = "https://docs.rs/redbot"
description = "Reddit API wrapper for Rust."
readme = "README.md"
keywords = ["reddit"]
categories = ["api-bindings"]
exclude = ["config.example.json"]

[dependencies]
reqwest = "0.9.17"
serde = "1.0.91"
serde_json = "1.0.39"
http = "0.1.17"
log = "0.4.6"

[dev-dependencies]
tempfile = "3.0.8"
mockito = "0.17.1"
lazy_static = "1.3.0"
